[package]
name = "ui-core"
version = "0.1.0"
edition = "2018"

[features]
asm = ["openh264/asm"]

[lib]
path = "src/lib.rs"

[dependencies]
glow = "0.11"
log = "0.4"
futures = "0.3.17"
failure = "0.1"
byteorder = "1.3"
ironrdp = { path = "../ironrdp" }
glutin = { version = "0.29" }
openh264  = { version = "0.2.18" }