[package]
name = "rdp_websocket_client"
version = "0.1.0"
authors = ["Salah Kamate <skamate@devolutions.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ironrdp = {path = "../../ironrdp", version = "0.4.0"}
#ironrdp_client = {path = "../../ironrdp_client", version = "0.4.0"}

wasm-bindgen = "0.2.58"
wasm-bindgen-test = "0.2.45"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.22"
console_error_panic_hook = "0.1.6"

# logs
console_log = "0.1"
log = "0.4.8"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.33"
features = [
    'BinaryType',
    'CloseEvent',
    'ErrorEvent',
    'Headers',
    'ImageData',
    'KeyboardEvent',
    'MouseEvent',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'WebSocket',
    'Window',
]
